--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-/* Header.css */
+
 .header-container {
   background-color: #fff;
   border-bottom: 1px solid #ddd;
@@ -9,6 +9,7 @@
   position: sticky;
   top: 0;
   z-index: 100;
+  height: 10vh;
 }
 
 .nav-container {
