--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -5,7 +5,7 @@
 
 .about-button {
   display: block;
-  margin: 0 auto;
+  margin: 20px auto;
   padding: 10px 20px;
   font-size: 1rem;
   color: #fff;
