--- a/client/src/Pages/Answer/Answer.css
+++ b/client/src/Pages/Answer/Answer.css
@@ -5,6 +5,7 @@
   font-family: Arial, sans-serif;
   width: 90%;
   margin: auto;
+  min-height: 90vh;
 }
 
 .answer-page h1 {
@@ -83,7 +84,7 @@
 
 .answer-provider {
   font-size: 14px;
-  color: #666;
+  color: #0b7d7e;
 }
 
 .answer-form {
